--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-flip-move": "^3.0.3",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "styled-components": "^4.2.0"
   },
   "devDependencies": {
     "prettier": "^1.16.4"
